Closed Bug 1342950 Opened 9 years ago Closed 9 years ago

MOZ_ASSERT(true) in SourceMediaStream::AddDirectTrackListenerImpl.

Categories

(Core :: Audio/Video: MediaStreamGraph, defect, P3)

50 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: bobowen, Assigned: pehrsons)

References

Details

Attachments

(1 file)

Just noticed this when searching for something else, I assume this [1] should be MOZ_ASSERT(false). [1] https://hg.mozilla.org/mozilla-central/file/106a96755d3b/dom/media/MediaStreamGraph.cpp#l3026
Flags: needinfo?(pehrson)
Whoa. Yes. Thanks for filing!
Assignee: nobody → pehrson
Rank: 35
Flags: needinfo?(pehrson)
Priority: -- → P3
Attachment #8861895 - Flags: review?(rjesup)
Status: NEW → ASSIGNED
Attachment #8861895 - Flags: review?(rjesup) → review+
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/dfaab9ab88f9 Assert false, not true, on failure in debug. r=jesup
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: