Bug 1342950 - Assert false, not true, on failure in debug. r=jesup

MozReview-Commit-ID: EQ9NESBhRdK